--- a/jupyter-local/notebooks/postgres_snapshot.ipynb
+++ b/jupyter-local/notebooks/postgres_snapshot.ipynb
@@ -16,16 +16,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2019-06-30 11:05:11--  https://repo1.maven.org/maven2/org/postgresql/postgresql/42.2.5/postgresql-42.2.5.jar\n",
-      "Resolving repo1.maven.org (repo1.maven.org)... 151.101.12.209\n",
-      "Connecting to repo1.maven.org (repo1.maven.org)|151.101.12.209|:443... connected.\n",
+      "--2020-02-01 22:09:10--  https://repo1.maven.org/maven2/org/postgresql/postgresql/42.2.5/postgresql-42.2.5.jar\n",
+      "Resolving repo1.maven.org (repo1.maven.org)... 151.101.112.209\n",
+      "Connecting to repo1.maven.org (repo1.maven.org)|151.101.112.209|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 825943 (807K) [application/java-archive]\n",
-      "Saving to: ‘/home/jovyan/postgresql-42.2.5.jar.1’\n",
+      "Saving to: ‘/home/jovyan/postgresql-42.2.5.jar’\n",
       "\n",
-      "postgresql-42.2.5.j 100%[===================>] 806.58K   227KB/s    in 3.6s    \n",
+      "postgresql-42.2.5.j 100%[===================>] 806.58K  2.39MB/s    in 0.3s    \n",
       "\n",
-      "2019-06-30 11:05:15 (227 KB/s) - ‘/home/jovyan/postgresql-42.2.5.jar.1’ saved [825943/825943]\n",
+      "2020-02-01 22:09:16 (2.39 MB/s) - ‘/home/jovyan/postgresql-42.2.5.jar’ saved [825943/825943]\n",
       "\n"
      ]
     }
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -113,13 +113,11 @@
       "+----+----------+---------+--------------------+\n",
       "|  id|first_name|last_name|               email|\n",
       "+----+----------+---------+--------------------+\n",
-      "|1734|   William|  Hensley|   rwebb@hotmail.com|\n",
-      "|1415|   Allison|     Hall|      dcook@long.com|\n",
-      "|1170|  Danielle|      Ali|   pknox@hotmail.com|\n",
-      "|1171|     Tanya|   Palmer|annettebolton@gma...|\n",
-      "|1172|     Randy|    James|stephensonchristi...|\n",
+      "|1001|     Sally|   Thomas|sally.thomas@acme...|\n",
+      "|1002|    George|   Bailey|  gbailey@foobar.com|\n",
+      "|1003|    Edward|   Walker|       ed@walker.com|\n",
+      "|1004|      Anne|Kretchmar|  annek@noanswer.org|\n",
       "+----+----------+---------+--------------------+\n",
-      "only showing top 5 rows\n",
       "\n",
       "Orders table\n",
       "+-----+----------+---------+--------+----------+\n",
@@ -186,19 +184,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# please write your query here\n",
-    "query = \"\"\n",
+    "query = \"\"\"\n",
+    "SELECT customers.id as id, first_name, last_name, SUM(weight) as total_weight\n",
+    "FROM customers\n",
+    "JOIN orders\n",
+    "ON customers.id = orders.purchaser\n",
+    "JOIN products\n",
+    "ON orders.product_id = products.id\n",
+    "GROUP BY customers.id, first_name, last_name\n",
+    "\"\"\"\n",
     "result = spark.sql(query)\n",
     "result.write.format(\"parquet\").save(\"/home/jovyan/weight_report\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +216,6 @@
       "|1002|    George|   Bailey|       1.875|\n",
       "|1003|    Edward|   Walker|         5.3|\n",
       "|1001|     Sally|   Thomas|         8.1|\n",
-      "|1004|      Anne|Kretchmar|        null|\n",
       "+----+----------+---------+------------+\n",
       "\n"
      ]
@@ -221,6 +225,62 @@
     "spark.read \\\n",
     "    .format(\"parquet\").load(\"/home/jovyan/weight_report\").show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+----------+---------+------------+\n",
+      "|  id|first_name|last_name|total_weight|\n",
+      "+----+----------+---------+------------+\n",
+      "|1003|    Edward|   Walker|         5.3|\n",
+      "|1001|     Sally|   Thomas|         8.1|\n",
+      "|1002|    George|   Bailey|       1.875|\n",
+      "+----+----------+---------+------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "result.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----+----------+---------+--------+----------+\n",
+      "|   id|order_date|purchaser|quantity|product_id|\n",
+      "+-----+----------+---------+--------+----------+\n",
+      "|10001|2016-01-16|     1001|       1|       102|\n",
+      "|10002|2016-01-17|     1002|       2|       105|\n",
+      "|10003|2016-02-19|     1002|       2|       106|\n",
+      "|10004|2016-02-21|     1003|       1|       107|\n",
+      "+-----+----------+---------+--------+----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "orders.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
