--- a/jupyter-local/notebooks/postgres_snapshot.ipynb
+++ b/jupyter-local/notebooks/postgres_snapshot.ipynb
@@ -16,16 +16,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2020-02-01 22:09:10--  https://repo1.maven.org/maven2/org/postgresql/postgresql/42.2.5/postgresql-42.2.5.jar\n",
+      "--2020-02-23 20:57:34--  https://repo1.maven.org/maven2/org/postgresql/postgresql/42.2.5/postgresql-42.2.5.jar\n",
       "Resolving repo1.maven.org (repo1.maven.org)... 151.101.112.209\n",
       "Connecting to repo1.maven.org (repo1.maven.org)|151.101.112.209|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 825943 (807K) [application/java-archive]\n",
       "Saving to: ‘/home/jovyan/postgresql-42.2.5.jar’\n",
       "\n",
-      "postgresql-42.2.5.j 100%[===================>] 806.58K  2.39MB/s    in 0.3s    \n",
+      "postgresql-42.2.5.j 100%[===================>] 806.58K  3.16MB/s    in 0.2s    \n",
       "\n",
-      "2020-02-01 22:09:16 (2.39 MB/s) - ‘/home/jovyan/postgresql-42.2.5.jar’ saved [825943/825943]\n",
+      "2020-02-23 20:57:34 (3.16 MB/s) - ‘/home/jovyan/postgresql-42.2.5.jar’ saved [825943/825943]\n",
       "\n"
      ]
     }
@@ -184,17 +184,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "query = \"\"\"\n",
-    "SELECT customers.id as id, first_name, last_name, SUM(weight) as total_weight\n",
+    "SELECT customers.id as id, first_name, last_name, SUM(weight) as total_weight, CURRENT_TIMESTAMP AS load_dttm\n",
     "FROM customers\n",
     "JOIN orders\n",
     "ON customers.id = orders.purchaser\n",
     "JOIN products\n",
     "ON orders.product_id = products.id\n",
+    "WHERE customers.id <= 1005\n",
     "GROUP BY customers.id, first_name, last_name\n",
     "\"\"\"\n",
     "result = spark.sql(query)\n",
@@ -203,20 +204,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+----+----------+---------+------------+\n",
-      "|  id|first_name|last_name|total_weight|\n",
-      "+----+----------+---------+------------+\n",
-      "|1002|    George|   Bailey|       1.875|\n",
-      "|1003|    Edward|   Walker|         5.3|\n",
-      "|1001|     Sally|   Thomas|         8.1|\n",
-      "+----+----------+---------+------------+\n",
+      "+----+----------+---------+------------+--------------------+\n",
+      "|  id|first_name|last_name|total_weight|           load_dttm|\n",
+      "+----+----------+---------+------------+--------------------+\n",
+      "|1003|    Edward|   Walker|         5.3|2020-02-23 21:17:...|\n",
+      "|1002|    George|   Bailey|       1.875|2020-02-23 21:17:...|\n",
+      "|1001|     Sally|   Thomas|         8.1|2020-02-23 21:17:...|\n",
+      "+----+----------+---------+------------+--------------------+\n",
       "\n"
      ]
     }
@@ -228,20 +229,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+----+----------+---------+------------+\n",
-      "|  id|first_name|last_name|total_weight|\n",
-      "+----+----------+---------+------------+\n",
-      "|1003|    Edward|   Walker|         5.3|\n",
-      "|1001|     Sally|   Thomas|         8.1|\n",
-      "|1002|    George|   Bailey|       1.875|\n",
-      "+----+----------+---------+------------+\n",
+      "+----+----------+---------+------------+--------------------+\n",
+      "|  id|first_name|last_name|total_weight|           load_dttm|\n",
+      "+----+----------+---------+------------+--------------------+\n",
+      "|1003|    Edward|   Walker|         5.3|2020-02-23 21:18:...|\n",
+      "|1001|     Sally|   Thomas|         8.1|2020-02-23 21:18:...|\n",
+      "|1002|    George|   Bailey|       1.875|2020-02-23 21:18:...|\n",
+      "+----+----------+---------+------------+--------------------+\n",
       "\n"
      ]
     }
@@ -252,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
